package paycore.paycore.domain;

public enum OrderStatus {
    PENDING,
    PAID,
    CANCELLED
}
