@startuml
skinparam linetype ortho
skinparam packageStyle rectangle
top to bottom direction

' ======================
' Presentation
' ======================
package "Presentation Layer" {
  class OrderController {
    +orderUseCase: OrderUseCase
    +getOrderUseCase: GetOrderUseCase
  ---
    +createOrder(input: OrderRequest): void
    +getOrder(input: GetOrderRequest): GetOrderResponse
  }

  package "DTO" {
    class OrderRequest
    class GetOrderRequest
    class GetOrderResponse
  }
}

' ======================
' Application – UseCase
' ======================
package "Application Layer\n<<UseCase>>" {
  interface UseCase<I, O> {
    +execute(input: I): O
  }

  interface OrderUseCase {
    +execute(input: OrderRequest): void
  }
  interface GetOrderUseCase {
     +execute(input: GetOrderRequest): GetOrderResponse
  }

  OrderUseCase -up-|> UseCase
  GetOrderUseCase -up-|> UseCase
}

' ======================
' Application – Service (비즈니스 중심)
' ======================
package "Application Layer\n<<Service>>" {

  class OrderService {
    + orderOutboxRepository: OrderOutboxRepository
    + orderRepository: OrderRepository
    --
    +execute(input: OrderRequest): void
  }

  class GetOrderService {
    + orderRepository: OrderRepository
    --
    +execute(input: GetOrderRequest): GetOrderResponse
  }

  OrderUseCase <|.. OrderService
  GetOrderUseCase <|.. GetOrderService
}

' ======================
' Domain
' ======================
package "Domain Layer\n<<Order Aggregate>>" {

package "Domain" {
    class Order {
        +orderId: Long
        +idempotencyKey: UUID
        +status: OrderStatus
        +updateStatus(status: OrderStatus)
      }

      class OrderOutbox {
        +sagaId: UUID
        +eventType: EventType
        +status: OutboxStatus
        +createdAt: LocalDateTime
      }

      enum OrderStatus {
      PENDING PAID CANCELLED
      }
      enum OutboxStatus {
      PENDING SENT
      }
      enum EventType {
      SUCCESS FAILURE
      }
}

' ======================
' DTO
' ======================
}

' ======================
' Infrastructure
' ======================
package "Infrastructure Layer" {
  interface JpaRepository
  interface OrderRepository
  interface OrderOutboxRepository
  JpaRepository <-up- OrderRepository
  JpaRepository <-up- OrderOutboxRepository
}

' ======================
' Dependencies (위 → 아래)
' ======================
OrderController --* GetOrderUseCase
OrderController --* OrderUseCase
OrderService --* OrderRepository
OrderService --* OrderOutboxRepository
GetOrderService --* OrderRepository

' ======================
' Layout control (layer ordering)
' ======================
"Presentation Layer" -[hidden]-> "Application Layer\n<<UseCase>>"
"Application Layer\n<<UseCase>>" -[hidden]-> "Application Layer\n<<Service>>"
"Application Layer\n<<Service>>" -[hidden]-> "Domain Layer\n<<Order Aggregate>>"
@enduml
